--- a/css/estilos.css
+++ b/css/estilos.css
@@ -15,8 +15,9 @@ html, body{height: 100%;margin: 0;display: flex;flex-direction: column;}
 	height:720px;
 }
 .fm-video {
-	width: 100%;
-	height: 100%;
+    width: 100%;
+    max-width: 720px;
+    height: 450px; 
 }
 
 .fm-video .vjs-control-bar {
